...
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            android:text="Search by Username..." />

        <EditText
            android:id="@+id/admin_search_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_search_user_text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="90dp"
            android:minHeight="48dp"
            android:text="" />

        <ImageButton
            android:id="@+id/admin_search_user_button"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/admin_search_user_edit_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
...
