<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/admin_pfp_response"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/baseline_person_24"
                android:visibility="invisible"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/admin_username_response"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toStartOf="@+id/delete_account"
                app:layout_constraintStart_toEndOf="@+id/admin_pfp_response"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/admin_full_name_response"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_account"
                app:layout_constraintStart_toEndOf="@+id/admin_pfp_response"
                app:layout_constraintTop_toBottomOf="@+id/admin_username_response" />

            <Button
                android:id="@+id/delete_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>