...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/create_post_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/create_post_description_label"
                />

...
